--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 		<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
 		<!-- My code. -->
-		<script src="lango.js"></script>
+		<script src="lango_pt1.js"></script>
+		<script src="lango_pt2.js"></script>
 		<script src="makeRequest.js"></script>
 	</body>
 </html>
