--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
 		<title>lango!</title>
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="welcome.css">
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="height=device-height">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
