restructured project files

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title>lango!</title>
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="main.css">
-		<link rel="stylesheet" href="welcome.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/welcome.css">
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="height=device-height">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
@@ -21,8 +21,8 @@
 		<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
 		<!-- My code. -->
-		<script src="lango_pt1.js"></script>
-		<script src="lango_pt2.js"></script>
-		<script src="makeRequest.js"></script>
+		<script src="js/lango_pt1.js"></script>
+		<script src="js/lango_pt2.js"></script>
+		<script src="js/makeRequest.js"></script>
 	</body>
 </html>
