--- a/public/user/review.html
+++ b/public/user/review.html
@@ -2,7 +2,8 @@
 	<head>
 		<title>lango! - Review Cards </title>
 		<link rel="stylesheet" href="../css/reset.css">
-		<link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/style.css">
 		<link rel="stylesheet" href="../css/welcome.css">
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="height=device-height">
