server returns a flashcard's data

--- a/public/user/review.html
+++ b/public/user/review.html
@@ -17,6 +17,10 @@
 
 		</div>
 
+		<div id="answer" style="display:none">
+
+		</div>
+
 		<!-- React. -->
 		<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 		<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
