finished mobile css

--- a/public/user/add.html
+++ b/public/user/add.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="../css/reset.css">
 		<link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/welcome.css">
+		<link rel="stylesheet" href="../css/mobile.css">
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="height=device-height">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
