--- a/public/user/review.html
+++ b/public/user/review.html
@@ -2,9 +2,10 @@
 	<head>
 		<title>lango! - Review Cards </title>
 		<link rel="stylesheet" href="../css/reset.css">
-        <link rel="stylesheet" href="../css/main.css">
+		<link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/style.css">
 		<link rel="stylesheet" href="../css/welcome.css">
+		<link rel="stylesheet" href="../css/mobile.css">
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="height=device-height">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
